--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body {
     font-family: Arial, sans-serif;
 }
-.weather-app {
-    max-width: 600px;
+.weather-app-wrapper {
+max-width: 600px;
     margin: 30px auto;
+}
+.weather-app {
+    
     padding: 20px;
     border: 1px solid #dadde1;
     border-radius: 5px;
@@ -27,4 +30,24 @@ li {
     line-height: 19px;
     margin: 0;
     padding: 0;
+}
+.overview {
+    margin-top: 20px;
+
+}
+.weather-temperature img {
+margin-right: 5px;
+height: 64px;
+width: 64px;
+}
+.weather-temperature strong{
+    color: rgb(33, 33, 33);
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 1;
+}
+.weather-temperature .units {
+    position: relative;
+    font-size: 16px;
+    top: -34px;
 }
