--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ li {
     line-height: 19px;
     margin: 0;
     padding: 0;
+    
+}
+li:first-letter {
+    text-transform: capitalize;
 }
 .overview {
     margin-top: 20px;
@@ -41,10 +45,9 @@ height: 64px;
 width: 64px;
 }
 .weather-temperature strong{
-    display: block;
     position: relative;
     top: -65px;
-    left: 75px;
+    left: 70px;
     color: rgb(33, 33, 33);
     font-size: 64px;
     font-weight: 400;
@@ -53,6 +56,7 @@ width: 64px;
 .weather-temperature .units {
     position: relative;
     font-size: 16px;
-    top: -128px; 
-    left: 150px;
+    top: -100px; 
+    left: 65px;
+
 }
