--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ li {
     font-weight: 100;
     line-height: 19px;
     margin: 0;
-    padding: 0;
+    padding: 3px;
     
 }
 li:first-letter {
@@ -38,6 +38,9 @@ li:first-letter {
 .overview {
     margin-top: 20px;
 
+}
+a {
+    text-decoration: none;
 }
 .weather-temperature img {
 margin-right: 5px;
@@ -56,7 +59,13 @@ width: 64px;
 .weather-temperature .units {
     position: relative;
     font-size: 16px;
-    top: -100px; 
+    top: -100px;
     left: 65px;
-
+}
+.weather-temperature .active {
+color: rgb(33, 33, 33);
+cursor: default;
+}
+.weather-temperature .active:hover {
+text-decoration: none;
 }
