--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@ max-width: 600px;
     padding: 20px;
     border: 1px solid #dadde1;
     border-radius: 5px;
+    background-color: #00DBDE;
+    background-image: linear-gradient(0deg, #00DBDE 0%, #ffe900 100%);
 }
 h1 {
-   color: #878787;
+   color: black;
    font-size: 24px;
    font-weight: 100;
    line-height: 28px;
@@ -24,7 +26,7 @@ ul {
 }
 li {
     list-style: none;
-    color: #878787;
+    color: black;
     font-size: 16px;
     font-weight: 100;
     line-height: 19px;
